--- a/alpha_web_app/package.json
+++ b/alpha_web_app/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/007Nil/Behisebe#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2"
   }
 }
