--- a/alpha_web_app/package.json
+++ b/alpha_web_app/package.json
@@ -4,6 +4,7 @@
   "description": "Alpha Web Application for behisebe",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
