--- a/alpha_web_app/package.json
+++ b/alpha_web_app/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/007Nil/Behisebe#readme",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.2.0"
   }
 }
