--- a/alpha_web_app/package.json
+++ b/alpha_web_app/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/007Nil/Behisebe#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "js-yaml": "^4.1.0",
     "mysql2": "^3.2.0"
   }
