--- a/alpha_web_app/package.json
+++ b/alpha_web_app/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "js-yaml": "^4.1.0",
-    "mysql2": "^3.2.0"
+    "mysql2": "^3.2.0",
+    "serve-favicon": "^2.5.0"
   }
 }
