--- a/alpha_web_app/configaration/config.yml
+++ b/alpha_web_app/configaration/config.yml
@@ -1,4 +1,5 @@
-MysqlServer: 192.168.1.16
+# MysqlServer: 192.168.1.16
+MysqlServer: localhost
 MysqlUser: root
 MysqlPassword: sxycmfczbe2ru5v3
 MysqlDatabase: Behisebe
