--- a/behisebe_ui/package.json
+++ b/behisebe_ui/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "recharts": "^2.8.0"
   },
   "devDependencies": {
