--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,10 @@ services:
       - MYSQL_DATABASE=${MYSQL_DATABASE}
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${MYSQLDB_ROOT_PASSWORD}
     volumes:
       - mysql-data:/var/lib/mysql
+      - ./behisebe_alpha.sql:/docker-entrypoint-initdb.d/0_init.sql
     networks:
       - nodejs-mysql-network
     healthcheck:
@@ -41,7 +42,6 @@ services:
       timeout: 30s
 volumes:
   mysql-data: 
-    driver: local
 networks:
   nodejs-mysql-network:
     name: nodejs-mysql-network
