--- a/src/dummy_data/expense_reason.json
+++ b/src/dummy_data/expense_reason.json
@@ -10,5 +10,10 @@
     {
         "_id": "3",
         "expense_reason": "Electricity bill"
+    },
+    {
+        "_id": "4",
+        "expense_reason": "Online Food Order"
     }
+
 ]
