--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@realm/react": "^0.8.0",
     "expo": "^51.0.0",
     "expo-dev-client": "~4.0.18",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
@@ -29,12 +30,12 @@
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-size-matters": "^0.4.2",
-    "realm": "^12.9.0",
-    "typescript": "~5.3.3",
-    "@types/react": "~18.2.79"
+    "realm": "^12.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.3",
+    "typescript": "^5.5.4"
   },
   "private": true
 }
