--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "@realm/react": "^0.8.0",
     "expo": "^51.0.0",
     "expo-dev-client": "~4.0.18",
     "expo-sqlite": "~14.0.6",
@@ -29,8 +28,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-size-matters": "^0.4.2",
-    "realm": "^12.9.0"
+    "react-native-size-matters": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
