--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/react-native": "^5.1.3",
     "@expo/config": "^8.1.1",
     "@expo/metro-config": "^0.10.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
