--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "^51.0.0",
     "expo-dev-client": "~4.0.25",
+    "expo-linear-gradient": "~13.0.2",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
@@ -25,11 +26,13 @@
     "react-native": "0.74.2",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-charts": "^1.4.47",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-size-matters": "^0.4.2"
+    "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
