--- a/app.json
+++ b/app.json
@@ -27,6 +27,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "06bf021f-1cfc-4f08-b9bf-d588cdbf2e96"
+      }
     }
   }
 }
