--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-element-dropdown": "^2.12.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.47",
     "react-native-modal": "^13.0.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
