--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "crypto-js": "^4.2.0",
     "expo": "^51.0.0",
     "expo-dev-client": "~4.0.25",
     "expo-linear-gradient": "~13.0.2",
