--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@expo/config": "^8.1.1",
     "@expo/metro-config": "^0.10.0",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "crypto-js": "^4.2.0",
+    "@robinbobin/react-native-google-drive-api-wrapper": "^2.2.3",
+    "@types/gapi": "^0.0.47",
+    "axios": "^1.7.8",
+    "crypto-js": "3.1.9-1",
     "expo": "^51.0.0",
+    "expo-build-properties": "~0.12.5",
     "expo-dev-client": "~4.0.25",
+    "expo-file-system": "~17.0.1",
     "expo-linear-gradient": "~13.0.2",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.11.1",
