--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@robinbobin/react-native-google-drive-api-wrapper": "^2.2.3",
     "@types/gapi": "^0.0.47",
     "axios": "^1.7.8",
-    "crypto-js": "3.1.9-1",
+    "crypto-js": "3.1.2",
     "expo": "^51.0.0",
     "expo-build-properties": "~0.12.5",
     "expo-dev-client": "~4.0.25",
