--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-size-matters": "^0.4.2",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "expo-task-manager": "~11.8.2",
+    "expo-background-fetch": "~12.0.1",
+    "expo-updates": "~0.25.27"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
