--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "axios": "^1.7.8",
     "crypto-js": "3.1.2",
     "expo": "^51.0.0",
+    "expo-background-fetch": "~12.0.1",
     "expo-build-properties": "~0.12.5",
     "expo-dev-client": "~4.0.25",
     "expo-file-system": "~17.0.1",
     "expo-linear-gradient": "~13.0.2",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.11.1",
+    "expo-task-manager": "~11.8.2",
+    "expo-updates": "~0.25.27",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
@@ -41,10 +44,7 @@
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-size-matters": "^0.4.2",
-    "react-native-svg": "15.2.0",
-    "expo-task-manager": "~11.8.2",
-    "expo-background-fetch": "~12.0.1",
-    "expo-updates": "~0.25.27"
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
