--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Behisebe",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -50,6 +51,5 @@
     "@babel/core": "^7.20.0",
     "@types/react": "^18.3.3",
     "typescript": "^5.5.4"
-  },
-  "private": true
+  }
 }
